--- a/src/components/Table/Styles/colors.scss
+++ b/src/components/Table/Styles/colors.scss
@@ -1,7 +1,7 @@
 // dark theme
 .dark-table {
     $rowoddcolor: rgba(1, 1, 3, 0.8);
-    $rowevencolor: rgba(51, 51, 51, 0.795);
+    $rowevencolor: rgba(15, 15, 15, 0.795);
     $hoverrowcolor: #313131af;
 
     thead {
@@ -17,7 +17,7 @@
             background-color: $rowevencolor;
         }
     
-        tr:hover {
+        .hover-effect:hover {
             background-color: $hoverrowcolor;
         }
     }
@@ -49,7 +49,7 @@
             background-color: $rowevencolor;
         }
     
-        tr:hover {
+        .hover-effect:hover {
             background-color: $hoverrowcolor;
         }
     }
