button animation classes

--- a/src/components/Buttons/Styles/base.scss
+++ b/src/components/Buttons/Styles/base.scss
@@ -1,11 +1,41 @@
-.button-custom {
-    &-1 {
-        background: red;
-    }
-    &-2 {
-        background-color: white;
-        width: 5rem;
-        border-radius: 0.25rem;
-        background: rgba(158, 158, 158, 0.85);
+.button-container {
+    margin: 0.15rem;
+    height: 30px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+
+    .button-custom {              
+      border-radius: 0.25rem;
+      width: 10rem;
+      height: 2rem;
+      margin: auto;
+      transition: all 0.5s;
+
+      span {
+          cursor: pointer;
+          display: inline-block;
+          position: relative;
+          transition: 0.5s;
+        }
+      
+      &.animate span:after {
+        content: '\2713';
+        position: absolute;
+        opacity: 0;
+        top: 0;
+        right: -20px;
+        transition: 0.5s;
+      }
+
+      &.animate:hover span {
+        padding-right: 1rem;
+      }
+      
+      &.animate:hover span:after {
+        opacity: 1;
+        right: 0;
+      }
     }
 }
+
