--- a/src/components/Spinners/Styles/base.scss
+++ b/src/components/Spinners/Styles/base.scss
@@ -2,22 +2,32 @@
     display: grid;
     justify-content: center;
     align-items: center;
+    vertical-align: text-bottom;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 17rem;
-    border: 0.9em solid rgba(0, 0, 0, 0.1);
-    border-top: 0.9em solid #2fc2baf5;
     border-radius: 50%;
-    width: 8rem;
-    height: 8rem;
-    animation: spin 0.6s linear infinite;
+    animation: spinner 0.6s linear infinite;
 
-    @keyframes spin {
-        0% {
-            transform: rotate(0deg);
-        }
+    &.sm {
+        width: 2rem;
+        height: 2rem;
+    }
+
+    &.md {
+        width: 5rem;
+        height: 5rem;
+    }
+
+    &.lg {
+        width: 8rem;
+        height: 8rem;
+    }
+
+    @keyframes spinner {
         100% {
-            transform: rotate(360deg);
+            -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);        
         }
     }
 }
